--- a/kvfiles/loginTela.kv
+++ b/kvfiles/loginTela.kv
@@ -73,6 +73,7 @@
                         self.text = 'Ainda não tenho cadastro?'
                         self.color = 0,0,0,1
                         self.background_color = 0,0,0,0
+                        root.limpa_info()
                         app.root.current = 'Cria usuario'
                 EntrarCadastrar:
                     size_hint: 0.3, 0.5
