--- a/kvfiles/notaCompromisso.kv
+++ b/kvfiles/notaCompromisso.kv
@@ -30,11 +30,11 @@
         BoxLayout:
             spacing: 10
             Label:
-                text: 'Hora'
+                text: 'Data'
                 color: 0,0,0,1
                 font_size: 16
             TextInput:
-                id: Hora
+                id: Data
                 size_hint: 0.7, 1
                 pos_hint: {'center_y': 0.5}
                 hint_text: 'Ex: Dia/Mês/Ano'
