--- a/kvfiles/profnotas.kv
+++ b/kvfiles/profnotas.kv
@@ -2,14 +2,14 @@
 #:import C kivy.utils.get_color_from_hex
 
 <Gerenciador>
-    LoginTela:
-        name: 'Tela de login'
-    CriarUsuarioTela:
-        name: 'Cria usuario'
-    MenuPrincipal:
-        name: 'Menu inicial'
-    CalendarioTela:
-        name: 'Calendario'
+#    LoginTela:
+#        name: 'Tela de login'
+#    CriarUsuarioTela:
+#        name: 'Cria usuario'
+#    MenuPrincipal:
+#        name: 'Menu inicial'
+#    CalendarioTela:
+#        name: 'Calendario'
     AdicionaAlunoTela:
         name: 'Adiciona aluno'
     BuscaAlunoTela:
