--- a/kvfiles/adicionaAlunoTela.kv
+++ b/kvfiles/adicionaAlunoTela.kv
@@ -17,16 +17,10 @@
             BotaoMenu:
                 pos_hint: {'left': 1, 'top': 0.7}
         BoxLayout:
-            size_hint: 1, 0.8
+            size_hint: 0.5, 0.8
             padding: 20,10,20,20
             orientation: 'vertical'
-            BoxLayout:
-                canvas.before:
-                    Color:
-                        rgba: 1,1,1, 1
-                    Rectangle:
-                        pos: self.pos
-                        size: self.size
+            RoundedBox:
                 BoxLayout:
                     orientation: 'vertical'
                     Image:
@@ -52,3 +46,14 @@
                             border: 0,0,0,0
                             on_release:
                                 app.root.get_screen('Adiciona aluno').verifica_info()
+
+
+
+<RoundedBox@BoxLayout>
+    canvas.before:
+        Color:
+            rgba: 1,1,1, 1
+        RoundedRectangle:
+            pos: self.pos
+            size: self.size
+            radius: [0, self.size[0], 0, 50]
