--- a/kvfiles/formAluno.kv
+++ b/kvfiles/formAluno.kv
@@ -17,6 +17,7 @@
             TextInput:
                 pos_hint: {'center_y': 0.45}
                 id: Nome
+                halign: 'center'
                 hint_text_color: 11/255,72/255,107/255, 0.7
                 hint_text: ' Digite o nome do(a) aluno(a)'
                 font_size: min(self.width, self.height)/2
@@ -26,6 +27,7 @@
                 multiline: False
                 write_tab: False
                 size_hint: 0.9, 1
+                on_text: app.root.get_screen('Adiciona aluno').get_info_aluno(self.text, 'Nome')
             BoxLayout:
                 size_hint: 0.1, 1
         BoxLayout:
@@ -40,6 +42,7 @@
             TextInput:
                 pos_hint: {'center_y': 0.45}
                 id: Sobrenome
+                halign: 'center'
                 size_hint: 0.9, 1
                 hint_text_color: 11/255,72/255,107/255, 0.7
                 hint_text: ' Digite o sobrenome do(a) aluno(a)'
@@ -49,6 +52,7 @@
                 font_name: 'Fonts/AmaticSC-Bold.ttf'
                 multiline: False
                 write_tab: False
+                on_text: app.root.get_screen('Adiciona aluno').get_info_aluno(self.text, 'Sobrenome')
             BoxLayout:
                 size_hint: 0.1, 1
         BoxLayout:
@@ -62,6 +66,7 @@
             TextInput:
                 pos_hint: {'center_y': 0.45}
                 id: Numero
+                halign: 'center'
                 size_hint: 0.9, 1
                 hint_text_color: 11/255,72/255,107/255, 0.7
                 hint_text: ' Digite o número do(a) aluno(a)'
@@ -72,6 +77,7 @@
                 input_filter: 'int'
                 multiline: False
                 write_tab: False
+                on_text: app.root.get_screen('Adiciona aluno').get_info_aluno(self.text, 'Numero')
             BoxLayout:
                 size_hint: 0.1, 1
         BoxLayout:
@@ -85,6 +91,7 @@
             TextInput:
                 pos_hint: {'center_y': 0.45}
                 id: Serie
+                halign: 'center'
                 size_hint: 0.9, 1
                 hint_text_color: 11/255,72/255,107/255, 0.7
                 hint_text: ' Digite a série do(a) aluno(a)'
@@ -95,6 +102,7 @@
                 input_filter: 'int'
                 multiline: False
                 write_tab: False
+                on_text: app.root.get_screen('Adiciona aluno').get_info_aluno(self.text, 'Serie')
             BoxLayout:
                 size_hint: 0.1, 1
         BoxLayout:
@@ -108,6 +116,7 @@
             TextInput:
                 pos_hint: {'center_y': 0.45}
                 id: Turma
+                halign: 'center'
                 size_hint: 0.9, 1
                 hint_text_color: 11/255,72/255,107/255, 0.7
                 hint_text: ' Digite a turma do(a) aluno(a)'
@@ -117,5 +126,6 @@
                 font_name: 'Fonts/AmaticSC-Bold.ttf'
                 multiline: False
                 write_tab: False
+                on_text: app.root.get_screen('Adiciona aluno').get_info_aluno(self.text, 'Turma')
             BoxLayout:
                 size_hint: 0.1, 1
